--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,18 +11,21 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        java-version: 1.8
+        node-version: '16'
 
-    - name: Build with Gradle
-      run: ./gradlew assembleRelease
+    - name: Install dependencies
+      run: yarn install
+
+    - name: Build APK
+      run: yarn run assembleRelease
 
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
         name: app-release.apk
-        path: app/build/outputs/apk/release/app-release.apk
+        path: android/app/build/outputs/apk/release/app-release.apk
